--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <header>
             <a class="link-header" href="https://www.instagram.com/oticadavaed/" target="_blank"> Instagram
-                &#128147;</a>
-            <a class="link-header"> WhatsApp &#128241;</a>
-            <a class="link-header" href="mailto:oticadaved@gmail.com"> Email &#128233;</a>
-            <a class="link-header"> Ligar&#128222;</a>
+                </a>
+            <a class="link-header"> WhatsApp </a>
+            <a class="link-header" href="mailto:oticadaved@gmail.com"> Email </a>
+            <a class="link-header"> Ligar</a>
         </header>
 
         <iframe
